Admin: renamed 'Reports & Stats' → 'Generate Reports' for clarity

--- a/public/admin.html
+++ b/public/admin.html
@@ -70,7 +70,7 @@
                 <button class="btn btn-primary btn-lg" onclick="showSection('users')">Manage Users</button>
                 <button class="btn btn-primary btn-lg" onclick="showSection('requests')">All Requests</button>
                 <button class="btn btn-primary btn-lg" onclick="showSection('disputes')">Dispute Resolution</button>
-                <button class="btn btn-primary btn-lg" onclick="showSection('reports')">Reports & Stats</button>
+                <button class="btn btn-primary btn-lg" onclick="showSection('reports')">Generate Reports</button>
             </div>
         </div>
 
@@ -155,7 +155,7 @@
         <!-- REPORTS -->
     <section id="reports" class="content-section">
         <button class="btn btn-secondary back-btn" onclick="showSection('menu')">Back</button>
-        <h3 class="mt-3">Reports And Statistics</h3>
+        <h3 class="mt-3">Agrimovers Reports</h3>
         <div id="reportOutput" class="text-center py-5"></div>
         </section>
 
